--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "boxicons": "^2.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "remixicon": "^4.6.0",
     "scrollreveal": "^4.0.9",
